# matts-world

./: .gitignore  CMakeLists.txt  Readme.md  format.sh
.github/workflows/: ci.yml
assets/: joey.json
assets/tiles/: test_map.tmj
include/: components.h  defs.h  dialogue.h  entity.h  metadata.h  resources.h  scene.h
lib/chroma/: CMakeLists.txt  Readme.md
lib/chroma/include/: chroma.h
lib/chroma/src/: chroma.c
lib/clm/include/: clm.h
lib/clm/src/: clm.c
lib/cute/: CMakeLists.txt
lib/cute/include/: cute_tiled.h
lib/flecs/: CMakeLists.txt
lib/oof/: CMakeLists.txt  Readme.md
lib/oof/include/: oof.h
lib/oof/src/: oof.c
lib/sinput/: CMakeLists.txt  Readme.md
lib/sinput/include/: sinput.h
lib/sinput/src/: sinput.c
lib/spritel/: CMakeLists.txt  Readme.md
lib/spritel/include/: spritel.h
lib/spritel/src/: spritel.c
src/: dialogue.c  entity.c  main.c  metadata.c  resources.c  scene.c
